<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:layout_marginBottom="@dimen/margin_20"
        android:orientation="vertical"
        android:background="@drawable/rounded_frame_black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <View
                android:layout_width="@dimen/width_separator"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/commissions"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

            <View
                android:layout_width="@dimen/width_separator"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/guarantees"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

            <View
                android:layout_width="@dimen/width_separator"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/earnings"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:scaleType="center"
                android:layout_height="match_parent"
                android:src="@drawable/logo_white"
                android:background="@color/colorAccent"/>

            <View
                android:layout_width="@dimen/width_separator"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/percent_didi"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

            <View
                android:layout_width="@dimen/width_separator"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pay_didi"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

            <View
                android:layout_width="@dimen/width_separator"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_money_didi"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/other_aggregator"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

            <View
                android:layout_width="@dimen/width_separator"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/percent"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

            <View
                android:layout_width="@dimen/width_separator"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pay"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

            <View
                android:layout_width="@dimen/width_separator"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"/>

            <TextView
                style="@style/TextView"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/get_money"
                android:textSize="@dimen/text_header_16"
                android:fontFamily="@font/open_sans_400"
                android:layout_gravity="center"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</layout>