<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_gravity="center"/>

            <TextView
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:textSize="@dimen/text_header_21"
                android:fontFamily="@font/open_sans_700"
                android:text="@string/thanks"
                android:layout_gravity="center"
                android:gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_20"
                android:paddingStart="@dimen/margin_20"
                android:paddingEnd="@dimen/margin_20">

                <ImageView
                    android:layout_width="@dimen/size_52"
                    android:layout_height="@dimen/size_52"
                    android:src="@drawable/ic_support"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/margin_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_header_21"
                        android:fontFamily="@font/open_sans_700"
                        android:text="@string/support"/>

                    <TextView
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/support_text"
                        android:textSize="@dimen/text_header_16"
                        android:fontFamily="@font/open_sans_400"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_10"
                android:paddingStart="@dimen/margin_20"
                android:paddingEnd="@dimen/margin_20">

                <ImageView
                    android:layout_width="@dimen/size_52"
                    android:layout_height="@dimen/size_52"
                    android:src="@drawable/ic_ruble"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_header_21"
                        android:fontFamily="@font/open_sans_700"
                        android:text="@string/attractive_shifts"/>

                    <TextView
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/attractive_shifts_text"
                        android:textSize="@dimen/text_header_16"
                        android:fontFamily="@font/open_sans_400"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_10"
                android:paddingStart="@dimen/margin_20"
                android:paddingEnd="@dimen/margin_20">

                <ImageView
                    android:layout_width="@dimen/size_52"
                    android:layout_height="@dimen/size_52"
                    android:src="@drawable/ic_apply"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="@dimen/margin_10">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_header_21"
                        android:fontFamily="@font/open_sans_700"
                        android:text="@string/guarantees_hour"/>

                    <TextView
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guarantees_hour_text"
                        android:textSize="@dimen/text_header_16"
                        android:fontFamily="@font/open_sans_400"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_10"
                android:paddingStart="@dimen/margin_20"
                android:paddingEnd="@dimen/margin_20">

                <ImageView
                    android:layout_width="@dimen/size_52"
                    android:layout_height="@dimen/size_52"
                    android:src="@drawable/ic_rocket"
                    android:layout_gravity="center"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_10"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_header_21"
                        android:fontFamily="@font/open_sans_700"
                        android:text="@string/payouts"/>

                    <TextView
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payouts_text"
                        android:textSize="@dimen/text_header_16"
                        android:fontFamily="@font/open_sans_400"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_20"
                android:layout_marginTop="@dimen/margin_20"
                android:textSize="@dimen/text_header_18"
                android:fontFamily="@font/open_sans_700"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/how_much_earn"/>

            <include
                layout="@layout/table_layout" />

            <Button
                android:id="@+id/bt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginBottom="@dimen/margin_20"
                android:padding="@dimen/margin_10"
                android:fontFamily="@font/open_sans_600"
                android:textSize="@dimen/text_header_16"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:text="@string/register_another_driver"
                android:textColor="@color/white"
                bind:layout_constraintTop_toBottomOf="@+id/et_city"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>