<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="com.aks.didi.R"/>
        <variable
            name="viewModel"
            type="com.aks.didi.ui.photo.TakePhotoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            style="@style/TextView"
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:fontFamily="@font/open_sans_800"
            android:textSize="@dimen/text_header_21"
            android:gravity="center"
            android:text="@string/didi_txi_ru"
            bind:layout_constraintTop_toTopOf="parent"/>

        <TextView
            style="@style/TextView"
            android:id="@+id/tv_text_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:fontFamily="@font/open_sans_600"
            android:textSize="@dimen/text_header_18"
            android:text="@string/enter_you_data"
            bind:layout_constraintTop_toBottomOf="@+id/tv_title"/>

        <EditText
            android:id="@+id/et_fio"
            style="@style/EditText"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:onTextChanged="@{(text, _1, _2, _3) -> viewModel.onFioEntry(text.length)}"
            android:text="@={viewModel.fio}"
            android:hint="@string/SNMn"
            bind:layout_constraintTop_toBottomOf="@+id/tv_text_enter"/>

        <EditText
            android:id="@+id/et_phone"
            style="@style/EditText"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:onTextChanged="@{(text, _1, _2, _3) -> viewModel.onPhoneEntry(text.length)}"
            bind:phoneEditText="@{viewModel}"
            android:hint="@string/phone"
            bind:layout_constraintTop_toBottomOf="@+id/et_fio"/>

        <EditText
            android:id="@+id/et_city"
            style="@style/EditText"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:paddingTop="@dimen/margin_10"
            android:paddingBottom="@dimen/margin_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onTextChanged="@{(text, _1, _2, _3) -> viewModel.onCityEntry(text.toString)}"
            android:text="@{viewModel.city}"
            android:hint="@string/city"
            android:focusableInTouchMode="true"
            bind:topTopParentConstraint="@{viewModel.isFocusCity? 0: R.id.et_phone}"
            tools:layout_constraintTop_toBottomOf="@+id/et_phone"/>

        <TextView
            style="@style/TextView"
            android:id="@+id/tv_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:fontFamily="@font/open_sans_600"
            android:textSize="@dimen/text_header_18"
            android:text="@string/didi_text"
            bind:layout_constraintTop_toBottomOf="@+id/et_city"/>

        <Button
            android:id="@+id/bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginBottom="@dimen/margin_20"
            android:padding="@dimen/margin_10"
            android:enabled="@{viewModel.isNextEnabled}"
            android:onClick="@{()->viewModel.onNext()}"
            android:fontFamily="@font/open_sans_600"
            android:textSize="@dimen/text_header_16"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/next"
            android:textColor="@color/white"
            bind:layout_constraintTop_toBottomOf="@+id/tv_text"/>

        <androidx.recyclerview.widget.RecyclerView
            style="@style/RecyclerView"
            android:id="@+id/rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:elevation="5dp"
            bind:isVisible="@{viewModel.isFocusCity}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            bind:layout_constraintTop_toBottomOf="@+id/et_city"
            tools:listitem="@layout/item_city"
            tools:itemCount="12"
            tools:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>